# Appgame

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  ENVIRONMENT_SETUP.md  FISHING_GAME_DESIGN.md  README.md  TEACHING_GUIDE.md  TEST_REPORT.md  TRAE_CPP_CONFIG.md  build.sh  fishing-game.code-workspace
.trae/rules/: project_rules.md
.trae/specs/fishing_game_code_design/: checklist.md  spec.md  tasks.md
examples/hello_world/: main.cpp
include/core/: Audio.h  GameLoop.h  Graphics.h  Input.h  Log.h  Physics.h  Resource.h  Storage.h
include/fishing/core/: Config.h  DataStructures.h  Types.h
include/fishing/platform/: Platform.h
include/fishing/platform/default/: DefaultPlatform.h
include/fishing/systems/: FishManager.h  FishingSystem.h  PhysicsManager.h  SceneManager.h  TimeSystem.h  WeatherSystem.h
include/fishing/test/: TestFramework.h
include/fishing/ui/: HUD.h  InventoryUI.h  ShopUI.h  UIManager.h
src/core/: Audio.cpp  GameLoop.cpp  Graphics.cpp  Log.cpp  Physics.cpp  Resource.cpp  Storage.cpp
src/fishing/: main.cpp
src/fishing/core/: Config.cpp
src/fishing/platform/: Platform.cpp
src/fishing/platform/default/: DefaultPlatform.cpp
src/fishing/systems/: FishingSystem.cpp  SceneManager.cpp
src/fishing/test/: ConfigTests.cpp  FishingSystemTests.cpp  PlatformTests.cpp  UIManagerTests.cpp  main.cpp
src/fishing/ui/: HUD.cpp  InventoryUI.cpp  ShopUI.cpp  UIManager.cpp
